Enhance Python and SQL documentation
- Updated multiprocessing and threading sections with basic usage examples and IPC mechanisms.
- Expanded data structure documentation for dict and list, including performance, slicing, and common pitfalls.
- Added interview preparation tips, including high-frequency topics and code templates.
- Improved memory management documentation with gc module usage and memory leak detection strategies.
- Enhanced pip and venv toolchain documentation with installation, source configuration, and version locking.
- Added comprehensive SQL documentation covering syntax, data types, indexing, transactions, and performance optimization.
- Created new SQL section with links to various topics including ER modeling, normalization, and security practices.
- Updated grid list data to reflect new SQL documentation paths.